--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
 				}
 
                 // LIGHT SETUP
-				scene.add( new THREE.AmbientLight( 0xaaaaaa ) );
+				scene.add( new THREE.AmbientLight( 0 ) );
 
 				light = new THREE.DirectionalLight( 0xebae75,1 );
 				light.position.set( 1, 100, -400 );
