--- a/phystree.html
+++ b/phystree.html
@@ -12,22 +12,22 @@
         
         <div id="totext"></div>
         
-		<script src="/js/three.min.js"></script>
-		<script  src="/js/controls/OrbitControls.js"></script>
-        <script  src="/js/physi.js"></script>
-        <script src="/js/shaders/FXAAShader.js"></script>
-		<script src="/js/shaders/CopyShader.js"></script>
-		<script src="/js/shaders/ConvolutionShader.js"></script>
-		<script src="/js/shaders/DotScreenShader.js"></script>
-		<script src="/js/shaders/HorizontalBlurShader.js"></script>
-		<script src="/js/shaders/RGBShiftShader.js"></script>
-		<script src="/js/shaders/FilmShader.js"></script>
-		<script src="/js/postprocessing/EffectComposer.js"></script>
-		<script src="/js/postprocessing/RenderPass.js"></script>
-		<script src="/js/postprocessing/MaskPass.js"></script>
-		<script src="/js/postprocessing/FilmPass.js"></script>
-		<script src="/js/postprocessing/BloomPass.js"></script>
-		<script src="/js/postprocessing/ShaderPass.js"></script>
+		<script src="/webgl_post/js/three.min.js"></script>
+		<script  src="/webgl_post/js/controls/OrbitControls.js"></script>
+        <script  src="/webgl_post/js/physi.js"></script>
+        <script src="/webgl_post/js/shaders/FXAAShader.js"></script>
+		<script src="/webgl_post/js/shaders/CopyShader.js"></script>
+		<script src="/webgl_post/js/shaders/ConvolutionShader.js"></script>
+		<script src="/webgl_post/js/shaders/DotScreenShader.js"></script>
+		<script src="/webgl_post/js/shaders/HorizontalBlurShader.js"></script>
+		<script src="/webgl_post/js/shaders/RGBShiftShader.js"></script>
+		<script src="/webgl_post/js/shaders/FilmShader.js"></script>
+		<script src="/webgl_post/js/postprocessing/EffectComposer.js"></script>
+		<script src="/webgl_post/js/postprocessing/RenderPass.js"></script>
+		<script src="/webgl_post/js/postprocessing/MaskPass.js"></script>
+		<script src="/webgl_post/js/postprocessing/FilmPass.js"></script>
+		<script src="/webgl_post/js/postprocessing/BloomPass.js"></script>
+		<script src="/webgl_post/js/postprocessing/ShaderPass.js"></script>
 
         <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
 
