--- a/phystree.html
+++ b/phystree.html
@@ -38,7 +38,7 @@
             'use strict';
 			var scene, renderer, composer, controls;
 			var object, light, bscroll, scale, tense, action,bg, camera, scene, use_bg, particleSystem;
-			var loader, textto, mesh, plight, textlight, meshe, cntr;
+			var loader, textto, mesh, plight, textlight, meshez, cntr;
 			
         	Physijs.scripts.worker = 'js/physijs_worker.js';
         	Physijs.scripts.ammo = 'ammo.js';
